# vigir_pluginlib

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  package.xml  setup.py
action/: GetPluginDescriptions.action  GetPluginStatus.action  PluginManagement.action
include/vigir_pluginlib/: plugin.h  plugin_loader.h  plugin_loader_base.h  plugin_manager.h  pluginlib_msgs.h
launch/: footstep_planning_vis.launch
msg/: PluginDescription.msg  PluginManagement.msg  PluginStatus.msg
src/: plugin.cpp  plugin_loader_base.cpp  plugin_manager.cpp  pluginlib_msgs.cpp
srv/: GetPluginDescriptionsService.srv  GetPluginStatusService.srv  PluginManagementService.srv
vigir_plugin_manager/: CMakeLists.txt  package.xml  plugin.xml  setup.py
vigir_plugin_manager/launch/: plugin_mananger_rqt.launch
vigir_plugin_manager/resource/: plugin_manager.ui
vigir_plugin_manager/scripts/: plugin_manager_rqt
vigir_plugin_manager/src/vigir_plugin_manager/: plugin_manager_widget.py  plugin_tree_model.py
vigir_pluginlib/: CMakeLists.txt  package.xml
vigir_pluginlib/include/vigir_pluginlib/: plugin.h  plugin_aggregator.h  plugin_loader.h  plugin_loader_base.h  plugin_manager.h  type_class_traits.h
vigir_pluginlib/src/: plugin.cpp  plugin_loader_base.cpp  plugin_manager.cpp  type_class_traits.cpp
vigir_pluginlib_manager/: CMakeLists.txt  package.xml  plugin.xml  setup.py
vigir_pluginlib_manager/launch/: plugin_mananger_rqt.launch
vigir_pluginlib_manager/scripts/: plugin_manager_rqt
vigir_pluginlib_manager/src/vigir_pluginlib_manager/: plugin_manager_widget.py  plugin_tree_model.py
vigir_pluginlib_msgs/: CMakeLists.txt  package.xml
vigir_pluginlib_msgs/action/: GetPluginDescriptions.action  GetPluginStates.action  PluginManagement.action
vigir_pluginlib_msgs/include/vigir_pluginlib_msgs/: pluginlib_msgs.h
vigir_pluginlib_msgs/msg/: PluginDescription.msg  PluginState.msg  PluginStates.msg
vigir_pluginlib_msgs/src/: pluginlib_msgs.cpp
vigir_pluginlib_msgs/srv/: GetPluginDescriptionsService.srv  GetPluginStatesService.srv  PluginManagementService.srv
